<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context=".DetailActivity"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/detail_order"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape"
        android:padding="30dp">
        <TextView
            android:id="@+id/barang_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/barang_name"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_status"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_desc"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_banyak"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/banyak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banyak"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_banyak_karyawan"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/banyak_karyawan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banyak_karyawan"
            android:textColor="@color/black"/>

    </LinearLayout>
    <Button
        android:id="@+id/btn_join"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ikut Kerjakan Order"
        android:background="@drawable/rounded_corners_btn"/>
    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:layout_marginTop="30dp"
        android:text="Order Selesai Dikerjakan"
        android:background="@drawable/rounded_corners_btn"/>

</LinearLayout>